# Support-automation

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  config.py  pyproject.toml
adapters/: __init__.py
adapters/embedding_models/: __init__.py  multilingual_e5_embedding_model.py
adapters/feedback_sources/: __init__.py  local_apple_app_store_feedback_source.py  local_gmail_feedback_source.py  local_google_play_feedback_source.py
adapters/knowledge_sources/: __init__.py  local_confluence_knowledge_source.py  local_google_sheets_knowledge_source.py  local_jira_knowledge_source.py
adapters/language_models/: __init__.py  _response_parsing.py  claude_code_language_model.py  codex_cli_language_model.py  language_model_router.py  ollama_gemma_language_model.py  recorded_response_language_model.py  router_builder.py
adapters/notification/: __init__.py  local_email_sender.py  smtp_email_sender.py
adapters/persistence/: __init__.py  audit_log_repository_postgres.py  classification_repository_postgres.py  cron_lock.py  database.py  digest_log_repository_postgres.py  draft_reply_repository_postgres.py  feedback_cluster_repository_postgres.py  feedback_repository_postgres.py  in_memory_audit_log_repository.py  in_memory_classification_repository.py  in_memory_digest_log_repository.py  in_memory_draft_reply_repository.py  in_memory_feedback_cluster_repository.py  in_memory_feedback_repository.py  in_memory_knowledge_repository.py  in_memory_spike_event_repository.py  knowledge_repository_postgres.py  orm_models.py  spike_event_repository_postgres.py
adapters/reply_delivery/: __init__.py  filesystem_draft_writer.py  gmail_draft_writer.py
adapters/retrieval/: __init__.py  _chunk_row.py  (+5 more)
config_files/: apps.yaml  language_models.yaml  stakeholders.yaml  thresholds.yaml
data_fixtures/: README.md
docs/: ARCHITECTURE.md  DECISIONS.md  HANDBOOK.md
domain/: __init__.py  app.py  audit_log.py  classification.py  draft_reply.py  exceptions.py  feedback.py  feedback_cluster.py  knowledge_document.py  spike_event.py  stakeholder.py
entrypoints/: __init__.py  composition_root.py
migrations/: env.py
prompts/: classify_feedback.md  draft_reply.md
scripts/: add_feedback_fixture.py  bootstrap_schema.py  preview_redraft.py  record_llm_responses.py
secrets/: README.md
service_layer/: __init__.py
tests/: conftest.py
web_ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+182 files in other folders)
